--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "@fullcalendar/timegrid": "^6.1.15",
     "chart.js": "^4.4.3",
     "clsx": "^2.1.1",
-    "embla-carousel-auto-scroll": "^8.1.8",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-auto-scroll": "^8.6.0",
     "embla-carousel-autoplay": "^8.1.8",
-    "embla-carousel-react": "^8.2.0",
+    "embla-carousel-react": "^8.6.0",
     "flowbite-react": "^0.8.0",
     "framer-motion": "^11.3.31",
     "google-map-react": "^2.2.1",
@@ -62,6 +63,6 @@
     "prettier-plugin-tailwindcss": "^0.5.12",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2",
-    "vite": "^5.2.0"
+    "vite": "^5.4.19"
   }
 }
